2013-04-27  Frank Heckenbach <f.heckenbach@fh-soft.de>  (tiny change)

	* job.c (sync_output): Don't discard the output if
	acquire_semaphore fails; instead, dump the output unsynchronized.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	Support --output-sync on MS-Windows.
	* w32/compat/posixfcn.c: New file, with emulations of Posix
	functions and Posix functionality for MS-Windows.

	* w32/subproc/sub_proc.c: Include io.h.
	(process_noinherit): New function, forces a file descriptor to not
	be inherited by child processes.
	(process_easy): Accept two additional arguments, and use them to
	set up the standard output and standard error handles of the child
	process.

	* w32/include/sub_proc.h (process_easy): Adjust prototype.
	(process_noinherit): Add prototype.

	* read.c [WINDOWS32]: Include windows.h and sub_proc.h.

	* makeint.h (LOCALEDIR) [WINDOWS32}: Define to NULL if not
	defined.  This is needed because the MS-Windows build doesn't have
	a canonical place for LOCALEDIR.
	(WIN32_LEAN_AND_MEAN) [WINDOWS32]: Define, to avoid getting from
	windows.h header too much stuff that could conflict with the code.

	* main.c <sync_mutex>: New static variable.
	<switches>: Add support for "--sync-mutex" switch.
	(decode_output_sync_flags): Decode the --sync-mutex= switch.
	(prepare_mutex_handle_string) [WINDOWS32]: New function.
	(main): Add "output-sync" to .FEATURES.

	* job.h (CLOSE_ON_EXEC) [WINDOWS32]: Define to call
	process_noinherit.
	(F_GETFD, F_SETLKW, F_WRLCK, F_UNLCK, struct flock) [WINDOWS32]:
	New macros.
	(RECORD_SYNC_MUTEX): New macro, a no-op for Posix platforms.
	(sync_handle_t): New typedef.

	* job.c <sync_handle>: Change type to sync_handle_t.
	(FD_NOT_EMPTY): Seek to the file's end.  Suggested by Frank
	Heckenbach <f.heckenbach@fh-soft.de>.
	(pump_from_tmp_fd) [WINDOWS32]: Switch to_fd to binary mode for
	the duration of this function, and then change back before
	returning.
	(start_job_command) [WINDOWS32]: Support output_sync mode on