@@ -1,3 +1,8 @@
+2013-04-27  Eli Zaretskii  <eliz@gnu.org>
+
+	* job.c: Fix compilation error on GNU/Linux due to "label at end
+	of compound statement".
+
 2013-04-27  Frank Heckenbach <f.heckenbach@fh-soft.de>  (tiny change)
 
 	* job.c (sync_output): Don't discard the output if
